# snow

./: .gitignore  CMakeLists.txt  README.md  Thumbs.db
cmake/: CMakeLists.txt  FindASSIMP.cmake  FindAssImp.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake
cmake/include/assimp/: Makefile
cmake/include/assimp/code/: Makefile
cmake/shader/: shader.frag  shader.vert
cmake/srccmake/: main (w3tlaps in Konflikt stehende Kopie 2014-07-05).cpp  myphysicengine.h  myrenderingengine.h  physicEngine.h  shader.h
cmake/srccmake/object/: mesh.h  texture.cpp
cmake/srccmake/pipeline/: camera.cpp
cmake/srccmake/technique/: lightingtechnique.h  shadowMapTechnique.h  shadowmapbufferobject.h  technique.h
exe/snow/: snowBallDrop_deprecated_atm.cpp  snowBallSmash_deprecated_atm.cpp  snowBallsCrash_deprecated_atm.cpp  snowBunnyScene_deprecated_atm.cpp  snowPlowField_deprecated_atm.cpp  snowPlowTrack_deprecated_atm.cpp  snowSingleParticle_deprecated_atm.cpp  snowSquare_deprecated_atm.cpp
exe/test/binning/: bin.cpp  bin.hpp  bin_mult.cpp
exe/test/map/: mapReduce.cpp  mapReduceBelow1024.cpp  mapReduceInterleaved.cpp  mapReduceMultipleAdds.cpp  mapReduceNotPow2.cpp  mapReduceSequential.cpp  mapReduceUnrollLastWarp.cpp
exe/test/reorder/: reorder.hpp  reorder_indices.cpp  reorder_is_sorted.cpp  reorder_is_sorted_aos.cpp  reorder_is_sorted_dwback.cpp
exe/test/scan/: scan.hpp  scan_raking.cpp  scan_raking_in_shared_mem.cpp  scan_simple.cpp  scan_unroll.cpp  scan_unroll_2.cpp  scan_unroll_4.cpp  scan_wo_bank_conflicts.cpp
exe/test/soa_aos/: soa.cpp  soa_scalar.cpp
exe/test/sort/: count_srt.cpp  count_srt.hpp
exe/test/svd/: svd.cpp
include/assimp/: CMakeLists.txt
include/assimp-build/: CMakeCache.txt  assimp.pc  cmake_uninstall.cmake  revision.h
include/cl-voxelize-master/: README.markdown  cl-voxelize-examples.asd  cl-voxelize-test.asd  cl-voxelize.asd  takagicl-voxelize.URL
include/cl-voxelize-master/examples/: Thumbs.db  bunny.lisp  bunny.lisp.w70012  bunny.ply  bunny.pov  povray.sh
include/cl-voxelize-master/src/: cl-voxelize.lisp
include/cl-voxelize-master/t/: cl-voxelize.lisp
include/math3d/: CMakeLists.txt  math3d.cpp  math3d.hpp
include/stb_image/: CMakeLists.txt
include/vulkanhpp/: vulkan.hpp
model/: bunny.voxel  bunnygoodres.mtl  bunnysnow.mtl  sphere.mtl
presentation/: Kolloquium Computergrafik.odp  Thumbs.db
resources/model/: Thumbs.db
resources/textures/: Thumbs.db
shader/: CMakeLists.txt  computeMass.glsl  computeParticleVolume.glsl  computeShader.glsl  gForceCompute.glsl  gReset.glsl  gridShader.frag  m_shadow.vert  overGridAndParticles.glsl  overParticlesAndNeighbors.glsl  pVolumeCompute.glsl  particleShader.frag  particleShader.glsl  particleShader.vert  resetGrid.glsl  shader.frag  shader.vert  updateGridMassVel.glsl  updateGridVelCollision.glsl  updateParticleVel.glsl  updateParticles.glsl  updateRigids.glsl
shader/buffers/: atomic_counter.include.glsl  block.include.glsl  block_indirect_dispatch.include.glsl  counter.include.glsl  grid_defines.include.glsl  indices.include.glsl  particle.include.glsl  particle_grid_offset.include.glsl  particle_indices.include.glsl  particle_system.include.glsl  scan_buffer.include.glsl  ssbo_uint.include.glsl  tile.include.glsl  tile_indirect_dispatch.include.glsl  ubo_sort_unsort.include.glsl  ubo_uint.include.glsl  uniform_grid.include.glsl  unsorted_index.include.glsl
shader/buffers/structs/: block.include.glsl  counter.include.glsl  grid.include.glsl  gridOffset.include.glsl  grid_def.include.glsl  index.include.glsl  indirect_dispatch.include.glsl  particle.include.glsl  particle_unsorted_index.include.glsl  scan.include.glsl  tile.include.glsl
shader/compute/atomic/: atomicAddFloat.include.glsl  nvidia.include.glsl
shader/compute/indexing/: gridIndex.include.glsl  neighborIndex.include.glsl  scan_block_index.glsl  voxelAndTilePointer.include.glsl
shader/defines/: grid_defines.include.glsl  sorting_key.include.glsl
shader/render/: gBorders.frag  pPoints.frag  phong.vert
shader/shared_hpp/: buffer_bindings.hpp  desktop.ini  interpolation_support.hpp  precision.hpp  voxel_block_size.hpp  voxel_tile_size.hpp
shader/test/: map.glsl  mapReduce.glsl  svd.glsl
shader/utils/: access.include.glsl  precision.hpp  sorting_method.include.glsl
src/: defines.h  main.cpp  math3d.cpp  math3d.h  myrenderingengine.cpp  physicEngine.h  renderingEngine.h  shader.cpp  technique.cpp
src/core/: CMakeLists.txt
src/exe/: launch.hpp  main.cpp  scene0.cpp  scene1.cpp  scene2.cpp  scene3.cpp  scene4.cpp  scene5.cpp  scene6.cpp  scene7.cpp  snowBallDrop.cpp  snowBallSmash.cpp  snowBallsCrash.cpp  snowBunnyScene.cpp  snowPlowField.cpp  snowPlowTrack.cpp  snowSingleParticle.cpp  snowSquare.cpp
src/object/: collider.h  collisionObjects.cpp  collisionObjects.h  grid.cpp  grid.h  gridPoint.h  mesh.cpp  mesh.h  particle.h  particlesystem.cpp  particlesystem.h  texture.h
src/pipeline/: camera.h  pipeline.cpp  pipeline.h
src/rendering/: myRenderingEngine.h  myrenderingengine.cpp  myrenderingengine.h  renderingEngine.h
src/shader/: technique.h
src/simulation/: myPhysicEngine.h  myphysicengine.cpp  physicEngine.h  timeUpdate.h
src/snow/: CMakeLists.txt
src/technique/: technique.cpp
src/test/: BlockBufferData.hpp  BlockBufferDataAccess.hpp  BufferData.cpp  BufferData.hpp  BufferDataInterface.hpp  CMakeLists.txt  IOBufferData.cpp  IOBufferData.hpp  OutputBufferData.hpp  SortedBufferData.cpp  SortedBufferData.hpp  SortedBufferDataAccess.cpp  SortedBufferDataAccess.hpp  SortedFullBufferData.cpp  SortedFullBufferData.hpp  SortedIndexReadBufferData.cpp  SortedIndexReadBufferData.hpp  SortedIndexWriteBufferData.cpp  SortedIndexWriteBufferData.hpp  StreamCompactBufferData.cpp  StreamCompactBufferData.hpp  StreamCompactBufferDataAccess.cpp  StreamCompactBufferDataAccess.hpp  StreamCompactIndexBufferData.cpp  StreamCompactIndexBufferData.hpp  map.cpp  mapReduce.cpp  svd.cpp  test_util.hpp
stb_image/: stb_image.c
textures/: Thumbs.db
video/: Thumbs.db
video_and_thesis/: Thumbs.db
(+567 files in other folders)
